Página Pessoal 1.1 - Adicionado a Página de contatos

--- a/portifolio.html
+++ b/portifolio.html
@@ -3,11 +3,13 @@
 <head>
 	<title>Curriculum</title>
 	<meta charset="utf-8" />
+    <!--Import Google Icon Font-->
+    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/materialize.min.css"/>
 	<link rel="stylesheet" type="text/css" href="css/estilo.css"/>
 	<script type="text/javascript" src="js/jquery-3.1.1.min.js"></script>  
-  <script type="text/javascript" src="js/materialize.min.js"></script>
-  
+    <script type="text/javascript" src="js/materialize.min.js"></script>
+    <script type="text/javascript" src="js/projeto.js"></script>
 
 </head>
 <body>
@@ -16,7 +18,8 @@
     <div class="nav-wrapper container"><a id="logo-container" class="brand-logo">Curriculum</a>
       <ul class="right hide-on-med-and-down">
         <li><a href="index.html">Informações Pessoais</a></li>
-        <li><a href="projetos.html">Projetos</a></li>
+        <li><a href="portifolio.html">Projetos</a></li>
+        <li><a href="contato.html">Contato</a></li>
       </ul>
 
       
